# pensieve-client

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/pensieve_client/: admin.py  apps.py  handler.py  middleware.py  models.py  urls.py  utils.py  views.py
src/pensieve_client/templates/pensieve_client/: dashboard.html  endpoint_detail.html  error_detail.html
src/pensieve_client/templatetags/: pensieve_tags.py
