# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pensieve"
version = "0.1.0"
authors = [
  { name="Harshita Jain", email="harshitajn18@gmail.com" },
]
description = "The official client library for the Pensieve APM."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]
dependencies = [
    "Django>=3.2",
    "requests",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include any files under the package (useful fallback for non-sdist builders)
"pensieve_client" = ["templates/*", "templates/pensieve_client/*"]
